# app/main.go
@@ -3,6 +3,7 @@ package main
 import (
 	"context"
 	"encoding/json"
+	"errors"
 	"fmt"
 	"math"
 	"net/http"
@@ -17,6 +18,9 @@ import (
 	chimiddleware "github.com/oapi-codegen/nethttp-middleware"
 
 	"github.com/go-chi/chi/v5"
+	chimiddleware2 "github.com/go-chi/chi/v5/middleware"
+	"github.com/go-chi/httplog/v2"
+	"github.com/go-chi/render"
 	"github.com/rs/zerolog"
 	"github.com/rs/zerolog/log"
 )
@@ -32,6 +36,35 @@ func main() {
 	}
 
 	router := chi.NewRouter()
+	// chimiddleware2.Logger.WithLogger(zerolog.New(os.Stdout).With().Timestamp().Logger())
+	router.Use(chimiddleware2.Logger)
+	router.Use(chimiddleware2.RequestID)
+	router.Use(chimiddleware2.Timeout(60 * time.Second))
+	router.Use(chimiddleware2.URLFormat)
+	router.Use(render.SetContentType(render.ContentTypeJSON))
+	// logger := httplog.NewLogger("httplog-example", httplog.Options{
+	// 	// JSON:             true,
+	// 	LogLevel:         slog.LevelDebug,
+	// 	Concise:          true,
+	// 	RequestHeaders:   true,
+	// 	MessageFieldName: "message",
+	// 	// TimeFieldFormat: time.RFC850,
+	// 	Tags: map[string]string{
+	// 		"version": "v1.0-81aa4244d9fc8076a",
+	// 		"env":     "dev",
+	// 	},
+	// 	QuietDownRoutes: []string{
+	// 		"/",
+	// 		"/ping",
+	// 	},
+	// 	QuietDownPeriod: 10 * time.Second,
+	// 	// SourceFieldName: "source",
+	// })
+	// router.Use(httplog.RequestLogger(logger))
+
+	router.Get("/", func(w http.ResponseWriter, r *http.Request) {
+		w.Write([]byte("Welcome to PY's Tax Calculator API"))
+	})
 
 	// Add swagger UI endpoints
 	router.Get("/swagger/doc.json", func(w http.ResponseWriter, r *http.Request) {
@@ -64,6 +97,12 @@ func main() {
 			Middlewares: []api.MiddlewareFunc{
 				securityMiddleware,
 				validator,
+			},
+			ErrorHandlerFunc: func(w http.ResponseWriter, r *http.Request, err error) {
+				oplog := httplog.LogEntry(r.Context())
+				oplog.Error("msg here", "err", errors.New("err here"))
+				w.WriteHeader(500)
+				w.Write([]byte("oops, err"))
 			},
 		},
 	)
@@ -99,17 +138,23 @@ type server struct {
 	*TaxService
 }
 
+// Check returns a 200 status code if the service is up.
 func (s *TaxService) Check(ctx context.Context, request api.CheckRequestObject) (api.CheckResponseObject, error) {
 	return api.Check200JSONResponse{
 		Status: "ok",
 	}, nil
 }
 
+// GetTaxCalculator returns the tax brackets for the default year 2022.
 func (s *TaxService) GetTaxCalculator(ctx context.Context, request api.GetTaxCalculatorRequestObject) (api.GetTaxCalculatorResponseObject, error) {
 	taxBrackets, err := GetTaxCalculatorInstructionsByYear("")
 	if err != nil {
 		// c.IndentedJSON(http.StatusNotFound, err)
-		return nil, fmt.Errorf("error: %v", err)
+		return api.GetTaxCalculator400JSONResponse{
+			Code:    err.Code,
+			Field:   err.Field,
+			Message: err.Message,
+		}, nil
 	}
 	var response api.GetTaxCalculator200JSONResponse
 	for _, bracket := range taxBrackets {
@@ -118,6 +163,7 @@ func (s *TaxService) GetTaxCalculator(ctx context.Context, request api.GetTaxCal
 	return response, nil
 }
 
+// mapTaxBracketToAPITaxBracket maps a TaxBracket to an api.TaxBracket.
 func mapTaxBracketToAPITaxBracket(taxBracket TaxBracket) api.TaxBracket {
 	apiTaxBracket := api.TaxBracket{
 		Min:  taxBracket.Min,
@@ -130,23 +176,34 @@ func mapTaxBracketToAPITaxBracket(taxBracket TaxBracket) api.TaxBracket {
 	return apiTaxBracket
 }
 
+// GetTaxCalculatorByYear returns the tax brackets for the given year.
 func (s *TaxService) GetTaxCalculatorByYear(ctx context.Context, request api.GetTaxCalculatorByYearRequestObject) (api.GetTaxCalculatorByYearResponseObject, error) {
 
-	if _, err := strconv.Atoi(request.Year); err != nil {
-		return api.GetTaxCalculatorByYear400Response{}, nil
-	}
-	var response api.GetTaxCalculatorByYear200JSONResponse
-	taxBrackets, err := GetTaxCalculatorInstructionsByYear(request.Year)
-	if err != nil {
-		return api.GetTaxCalculatorByYear404Response{}, nil
+	if err := ValidateYear(request.Year); err != nil {
+		return api.GetTaxCalculatorByYear400JSONResponse{
+			Code:    http.StatusBadRequest,
+			Field:   "year",
+			Message: fmt.Sprintf("the tax year %v is not a valid year", request.Year),
+		}, nil
 	}
 
+	taxBrackets, err := GetTaxCalculatorInstructionsByYear(request.Year)
+	if err != nil {
+		return api.GetTaxCalculatorByYear404JSONResponse{
+			Code:    err.Code,
+			Field:   err.Field,
+			Message: err.Message,
+		}, nil
+	}
+
+	var response api.GetTaxCalculatorByYear200JSONResponse
 	for _, bracket := range taxBrackets {
 		response = append(response, mapTaxBracketToAPITaxBracket(bracket))
 	}
 	return response, nil
 }
 
+// mapTaxBracketsToAPITaxBrackets maps a slice of TaxBracket to a slice of api.TaxBracket.
 func mapTaxBracketsToAPITaxBrackets(taxBrackets []TaxBracket) []api.TaxBracket {
 	apiTaxBrackets := make([]api.TaxBracket, len(taxBrackets))
 	for i, bracket := range taxBrackets {
@@ -155,6 +212,7 @@ func mapTaxBracketsToAPITaxBrackets(taxBrackets []TaxBracket) []api.TaxBracket {
 	return apiTaxBrackets
 }
 
+// GetAllTaxCalculator returns all tax brackets for all supported years.
 func (s *TaxService) GetAllTaxCalculator(ctx context.Context, request api.GetAllTaxCalculatorRequestObject) (api.GetAllTaxCalculatorResponseObject, error) {
 	response := api.GetAllTaxCalculator200JSONResponse{}
 	for year, taxBrackets := range TaxBrackets {
@@ -163,19 +221,34 @@ func (s *TaxService) GetAllTaxCalculator(ctx context.Context, request api.GetAll
 	return response, nil
 }
 
+// Calculate calculates the tax for the year from JSON received in the request body.
 func (s *TaxService) Calculate(ctx context.Context, request api.CalculateRequestObject) (api.CalculateResponseObject, error) {
 	salary := request.Body.Salary
-
 	err := ValidateSalary(salary)
 	if err != nil {
-		return api.Calculate400Response{}, nil
+		return api.Calculate400JSONResponse{
+			Code:    err.Code,
+			Field:   err.Field,
+			Message: err.Message,
+		}, nil
 	}
 
 	year := request.Year
-	log.Debug().Msgf("postTaxCalculationsByYear() year: %v, salary: %.2f", year, salary)
+	if err := ValidateYear(year); err != nil {
+		return api.Calculate400JSONResponse{
+			Code:    http.StatusBadRequest,
+			Field:   "year",
+			Message: fmt.Sprintf("the tax year %v is not a valid year", request.Year),
+		}, nil
+	}
+
 	taxBrackets, err := GetTaxCalculatorInstructionsByYear(year)
 	if err != nil {
-		return api.Calculate400Response{}, nil
+		return api.Calculate400JSONResponse{
+			Code:    err.Code,
+			Field:   err.Field,
+			Message: err.Message,
+		}, nil
 	}
 
 	taxOwed := CalculateTaxAmount(year, taxBrackets, salary)
@@ -188,6 +261,7 @@ func (s *TaxService) Calculate(ctx context.Context, request api.CalculateRequest
 	}, nil
 }
 
+// NewSecurityMiddleware returns a new security middleware.
 func NewSecurityMiddleware() func(http.Handler) http.Handler {
 	return func(next http.Handler) http.Handler {
 		return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
@@ -224,16 +298,13 @@ func NewSecurityMiddleware() func(http.Handler) http.Handler {
 	}
 }
 
-type Salary struct {
-	Salary float64 `json:"salary"`
-}
-
 type Err struct {
-	Code    uint   `json:"code"`
+	Code    int    `json:"code"`
 	Field   string `json:"field"`
 	Message string `json:"message"`
 }
 
+// TaxOwed represents the tax owed for a given year.
 type TaxOwed struct {
 	EffectiveTaxRate string       `json:"effective_tax_rate"`
 	Salary           float32      `json:"salary"`
@@ -242,52 +313,7 @@ type TaxOwed struct {
 	TotalTaxOwed     float32      `json:"total_tax_owed"`
 }
 
-// // postTaxCalculationsByYear calculates the tax for the year from JSON received in the request body.
-// func postTaxCalculationsByYear(c *gin.Context) {
-// 	var newSalary Salary
-
-// 	log.Debug().Msg("postTaxCalculationsByYear called")
-// 	// Call BindJSON to bind the received JSON to newSalary.
-// 	if err := c.BindJSON(&newSalary); err != nil {
-// 		c.IndentedJSON(http.StatusBadRequest, gin.H{
-// 			"code":    http.StatusBadRequest,
-// 			"field":   "salary",
-// 			"message": fmt.Errorf("the salary for the tax year is not found"),
-// 		})
-// 		return
-// 	}
-
-// 	year := c.Param("year")
-// 	log.Debug().Msgf("postTaxCalculationsByYear() year: %v, salary: %.2f", year, newSalary.Salary)
-// 	taxBrackets, err := GetTaxCalculatorInstructionsByYear(year)
-// 	if err != nil {
-// 		c.IndentedJSON(http.StatusNotFound, gin.H{
-// 			"code":    err.Code,
-// 			"field":   err.Field,
-// 			"message": err.Message,
-// 		})
-// 		return
-// 	}
-// 	err = ValidateSalary(newSalary.Salary)
-// 	if err != nil {
-// 		c.IndentedJSON(http.StatusBadRequest, gin.H{
-// 			"code":    err.Code,
-// 			"field":   err.Field,
-// 			"message": err.Message,
-// 		})
-// 		return
-// 	}
-
-// 	taxOwed := CalculateTaxAmount(year, taxBrackets, newSalary.Salary)
-// 	c.IndentedJSON(http.StatusOK, gin.H{
-// 		"effective_tax_rate": taxOwed.EffectiveTaxRate,
-// 		"salary":             taxOwed.Salary,
-// 		"tax_year":           taxOwed.TaxYear,
-// 		"tax_owned_per_band": taxOwed.TaxOwnedPerBand,
-// 		"total_tax_owed":     taxOwed.TotalTaxOwed,
-// 	})
-// }
-
+// TaxBracket returns the tax bracket for a given year.
 func GetTaxCalculatorInstructionsByYear(year string) ([]TaxBracket, *Err) {
 	if year == "" {
 		year = "2022"
@@ -297,19 +323,25 @@ func GetTaxCalculatorInstructionsByYear(year string) ([]TaxBracket, *Err) {
 		return nil, &Err{
 			Code:    http.StatusNotFound,
 			Field:   "year",
-			Message: fmt.Sprintf("tax brackets for the tax year %v is not found", year),
+			Message: fmt.Sprintf("tax brackets for the tax year '%v' is not found", year),
 		}
 	}
 	return taxBrackets, nil
 }
 
-// func ValidateYear(year string) error {
-// 	if salary <= 0.0 {
-// 		return fmt.Errorf("the salary for the tax year must be greater than 0. Invalid value: %.2f", salary)
-// 	}
-// 	return nil
-// }
+// ValidateYear validates the year for the tax year.
+func ValidateYear(year string) *Err {
+	if _, err := strconv.Atoi(year); err != nil {
+		return &Err{
+			Code:    http.StatusBadRequest,
+			Field:   "year",
+			Message: fmt.Sprintf("the tax year %v is not a valid year", year),
+		}
+	}
+	return nil
+}
 
+// ValidateSalary validates the salary for the tax year.
 func ValidateSalary(salary float32) *Err {
 	if salary < 0 {
 		return &Err{
@@ -321,6 +353,7 @@ func ValidateSalary(salary float32) *Err {
 	return nil
 }
 
+// CalculateTaxAmount calculates the tax owed for a given year based on the tax brackets and salary.
 func CalculateTaxAmount(year string, taxBrackets []TaxBracket, salary float32) TaxOwed {
 	var taxAmount float32
 	var taxPerBracket []TaxBracket
